# reddit-multimodal-analysis

./: .gitignore  pyproject.toml  readme.md  requirements.txt
notebooks/: 01-create-folds.ipynb  02-multimodal-sentiment-analysis.ipynb  create-folds.ipynb  multimodal-sentiment-analysis.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20230330_232305-bxkxccfy/: run-bxkxccfy.wandb
notebooks/wandb/run-20230330_232305-bxkxccfy/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
notebooks/wandb/run-20230330_232443-qg90oury/: run-qg90oury.wandb
notebooks/wandb/run-20230330_232443-qg90oury/files/: config.yaml  wandb-metadata.json
notebooks/wandb/run-20230330_232739-jvwbyc3d/: run-jvwbyc3d.wandb
notebooks/wandb/run-20230330_232739-jvwbyc3d/files/: config.yaml  requirements.txt  wandb-metadata.json
notebooks/wandb/run-20230330_232904-25172ss2/: run-25172ss2.wandb
notebooks/wandb/run-20230330_232904-25172ss2/files/: config.yaml  wandb-metadata.json
reddit_multimodal_analysis/: __init__.py  config.py  create_folds.py  dataset.py  engine.py  model.py  utils.py
